[metadata]
name = bpycv3d
version = 1.0.0
author = Rohan Asokan
author_email = rohanasokan@gmail.com
description = Blender Python Package for extracting internal data from blender scenes for 3d related data generation purposes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArenaGrenade/bpycv3d
project_urls =
    Bug Tracker = https://github.com/ArenaGrenade/bpycv3d/-/issues
    repository = https://github.com/ArenaGrenade/bpycv3d
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires =


[options.packages.find]
where = src
